Add ChoriziteEnvironment enum

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,15 +29,15 @@ jobs:
       - uses: actions/upload-artifact@v4
         with: 
           name: "Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg"
-          path: "${{ github.workspace }}/bin/Release/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg"
+          path: "${{ github.workspace }}/bin/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg"
 
       - uses: actions/upload-artifact@v4
         with: 
           name: "Chorizite.Common.${{ env.GitVersion_FullSemVer }}.zip"
-          path: "${{ github.workspace }}/bin/Release/netstandard2.0/"
+          path: "${{ github.workspace }}/bin/netstandard2.0/"
 
       - name: Push NuGet Package
         run: |
           dotnet nuget add source --username Chorizite --password ${{ secrets.CI_NUGET_API_KEY }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Chorizite/index.json"
-          dotnet nuget push "${{ github.workspace }}/bin/Release/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg" --api-key ${{ secrets.CI_NUGET_API_KEY }} --source "github"
+          dotnet nuget push "${{ github.workspace }}/bin/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg" --api-key ${{ secrets.CI_NUGET_API_KEY }} --source "github"
       
