--- a/.github/workflows/make-release.yml
+++ b/.github/workflows/make-release.yml
@@ -50,18 +50,18 @@ jobs:
       - uses: actions/upload-artifact@v4
         with: 
           name: "Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg"
-          path: "${{ github.workspace }}/bin/Release/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg"
+          path: "${{ github.workspace }}/bin/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg"
 
       - uses: actions/upload-artifact@v4
         with: 
           name: "Chorizite.Common.${{ env.GitVersion_FullSemVer }}.zip"
-          path: "${{ github.workspace }}/bin/Release/netstandard2.0/"
+          path: "${{ github.workspace }}/bin/netstandard2.0/"
       
       - name: Push GitHub NuGet Package
         run: |
           dotnet nuget add source --username Chorizite --password ${{ secrets.CI_NUGET_API_KEY }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Chorizite/index.json"
-          dotnet nuget push "${{ github.workspace }}/bin/Release/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg" --api-key ${{ secrets.CI_NUGET_API_KEY }} --source "github"
-          dotnet nuget push "${{ github.workspace }}/bin/Release/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg" --api-key ${{ secrets.NUGET_DEPLOY_KEY }} --source https://api.nuget.org/v3/index.json
+          dotnet nuget push "${{ github.workspace }}/bin/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg" --api-key ${{ secrets.CI_NUGET_API_KEY }} --source "github"
+          dotnet nuget push "${{ github.workspace }}/bin/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg" --api-key ${{ secrets.NUGET_DEPLOY_KEY }} --source https://api.nuget.org/v3/index.json
 
       - name: Create release
         env:
@@ -72,7 +72,7 @@ jobs:
               --repo="$GITHUB_REPOSITORY" \
               --title="Release v${{ env.GitVersion_FullSemVer }}" \
               --generate-notes \
-              "${{ github.workspace }}/bin/Release/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg#Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg"
+              "${{ github.workspace }}/bin/Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg#Chorizite.Common.${{ env.GitVersion_FullSemVer }}.nupkg"
               
       - name: Bump version
         run: |
